# distribution

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.ci/: moby-distribution.yml
.github/workflows/: python-publish.yml  unittest.yml
moby_distribution/: __init__.py  auth.py  client.py  exceptions.py  utils.py
moby_distribution/registry/: auth.py  client.py  exceptions.py  utils.py
moby_distribution/registry/resources/: __init__.py  blobs.py  image.py  manifests.py  tags.py
moby_distribution/spec/: auth.py  base.py  endpoint.py  image_json.py  manifest.py
tests/integration/: conftest.py  docker-compose.yaml  test_client.py
tests/integration/resources/: conftest.py  test_blobs.py  test_image.py  test_manifests.py  test_mixin.py  test_tags.py
tests/registry/: test_auth.py  test_utils.py
tests/spec/: conftest.py  test_auth.py  test_endpoint.py  test_image_json.py  test_manifest.py
tests/spec/assets/: image_json.json
