[tool.poetry]
name = "moby-distribution"
version = "0.1.0"
description = "Yet another moby(docker) distribution implement by python."
authors = ["shabbywu <shabbywu@qq.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.6.1"
py-libtrust = "^1.0.1"
www-authenticate = "^0.9.2"
requests = "^2.26.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
