[tool.poetry]
name = "moby-distribution"
version = "0.7.1"
description = "Yet another moby(docker) distribution implement by python."
authors = ["shabbywu <shabbywu@qq.com>"]
license = "Apache-2.0"

readme = "README.md"
repository = "https://github.com/shabbywu/distribution"
homepage = "https://github.com/shabbywu/distribution"

[tool.poetry.dependencies]
python = ">= 3.6.2,<4"
www-authenticate = "^0.9.2"
requests = ">= 2.20.0"
pydantic = ">= 1.5"
py-libtrust = ">= 2.0.0"
curlify = "2.2.1"
cryptography = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"
docker = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
skip-string-normalization = 'true'

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 119
multi_line_output = 3
use_parentheses = true
